--- a/index.ipynb
+++ b/index.ipynb
@@ -33,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "1/2"
    ]
   },
   {
@@ -49,11 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.25\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "print((0.3*0.6)+(0.7*0.1))"
    ]
   },
   {
@@ -88,11 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21\n",
+      "0.45499999999999996\n",
+      "0.26373626373626374\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "print(0.35*0.6)\n",
+    "print((0.4*0.3)+(0.35*0.6)+(0.25*0.5))\n",
+    "print((0.4*0.3)/((0.4*0.3)+(0.35*0.6)+(0.25*0.5)))"
    ]
   },
   {
@@ -122,11 +145,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.034999999999999996\n",
+      "0.965\n",
+      "0.7424999999999999\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "print(0.4*0.25*0.35)\n",
+    "print(1-0.4*0.25*0.35)\n",
+    "print(((1-0.4)*(1-0.25)*0.35)+(0.4*(1-0.25)*(1-0.35))+((0.4)*0.25*(1-0.35)))"
    ]
   },
   {
@@ -147,11 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "print((1/3)*(0.75+0.6+0.45))"
    ]
   },
   {
@@ -180,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
